// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwapSDK getAssets returns the assets based on the cf_supported_assets rpc 1`] = `
[
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
  {
    "asset": "USDC",
    "chain": "Arbitrum",
    "chainflipId": "ArbUsdc",
    "contractAddress": "0x75faf114eafb1BDbe2F0316DF893fd58CE46AA4d",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum USDC",
    "symbol": "USDC",
  },
]
`;

exports[`SwapSDK getAssets returns the correct values for backspin 1`] = `
[
  {
    "asset": "FLIP",
    "chain": "Ethereum",
    "chainflipId": "Flip",
    "contractAddress": "0x10C6E9530F1C1AF873a391030a1D9E8ed0630D26",
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "FLIP",
    "symbol": "FLIP",
  },
  {
    "asset": "USDC",
    "chain": "Ethereum",
    "chainflipId": "Usdc",
    "contractAddress": "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "asset": "DOT",
    "chain": "Polkadot",
    "chainflipId": "Dot",
    "contractAddress": undefined,
    "decimals": 10,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Polkadot",
    "symbol": "DOT",
  },
  {
    "asset": "ETH",
    "chain": "Ethereum",
    "chainflipId": "Eth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
  {
    "asset": "USDT",
    "chain": "Ethereum",
    "chainflipId": "Usdt",
    "contractAddress": "0x0DCd1Bf9A1b36cE34237eEaFef220932846BCD82",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDT",
    "symbol": "USDT",
  },
  {
    "asset": "USDC",
    "chain": "Arbitrum",
    "chainflipId": "ArbUsdc",
    "contractAddress": "0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum USDC",
    "symbol": "USDC",
  },
  {
    "asset": "ETH",
    "chain": "Arbitrum",
    "chainflipId": "ArbEth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum Ether",
    "symbol": "ETH",
  },
]
`;

exports[`SwapSDK getAssets returns the correct values for mainnet 1`] = `
[
  {
    "asset": "FLIP",
    "chain": "Ethereum",
    "chainflipId": "Flip",
    "contractAddress": "0x826180541412D574cf1336d22c0C0a287822678A",
    "decimals": 18,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "FLIP",
    "symbol": "FLIP",
  },
  {
    "asset": "USDC",
    "chain": "Ethereum",
    "chainflipId": "Usdc",
    "contractAddress": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
    "decimals": 6,
    "isMainnet": true,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "asset": "DOT",
    "chain": "Polkadot",
    "chainflipId": "Dot",
    "contractAddress": undefined,
    "decimals": 10,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Polkadot",
    "symbol": "DOT",
  },
  {
    "asset": "ETH",
    "chain": "Ethereum",
    "chainflipId": "Eth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": true,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
  {
    "asset": "USDT",
    "chain": "Ethereum",
    "chainflipId": "Usdt",
    "contractAddress": "0xdAC17F958D2ee523a2206206994597C13D831ec7",
    "decimals": 6,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDT",
    "symbol": "USDT",
  },
  {
    "asset": "USDC",
    "chain": "Arbitrum",
    "chainflipId": "ArbUsdc",
    "contractAddress": "0xaf88d065e77c8cC2239327C5EDb3A432268e5831",
    "decimals": 6,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum USDC",
    "symbol": "USDC",
  },
  {
    "asset": "ETH",
    "chain": "Arbitrum",
    "chainflipId": "ArbEth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": true,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum Ether",
    "symbol": "ETH",
  },
]
`;

exports[`SwapSDK getAssets returns the correct values for perseverance 1`] = `
[
  {
    "asset": "FLIP",
    "chain": "Ethereum",
    "chainflipId": "Flip",
    "contractAddress": "0xdC27c60956cB065D19F08bb69a707E37b36d8086",
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "FLIP",
    "symbol": "FLIP",
  },
  {
    "asset": "USDC",
    "chain": "Ethereum",
    "chainflipId": "Usdc",
    "contractAddress": "0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "asset": "DOT",
    "chain": "Polkadot",
    "chainflipId": "Dot",
    "contractAddress": undefined,
    "decimals": 10,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Polkadot",
    "symbol": "DOT",
  },
  {
    "asset": "ETH",
    "chain": "Ethereum",
    "chainflipId": "Eth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
  {
    "asset": "USDT",
    "chain": "Ethereum",
    "chainflipId": "Usdt",
    "contractAddress": "0x27CEA6Eb8a21Aae05Eb29C91c5CA10592892F584",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDT",
    "symbol": "USDT",
  },
  {
    "asset": "USDC",
    "chain": "Arbitrum",
    "chainflipId": "ArbUsdc",
    "contractAddress": "0x75faf114eafb1BDbe2F0316DF893fd58CE46AA4d",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum USDC",
    "symbol": "USDC",
  },
  {
    "asset": "ETH",
    "chain": "Arbitrum",
    "chainflipId": "ArbEth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum Ether",
    "symbol": "ETH",
  },
]
`;

exports[`SwapSDK getAssets returns the correct values for sisyphos 1`] = `
[
  {
    "asset": "FLIP",
    "chain": "Ethereum",
    "chainflipId": "Flip",
    "contractAddress": "0xcD079EAB6B5443b545788Fd210C8800FEADd87fa",
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "FLIP",
    "symbol": "FLIP",
  },
  {
    "asset": "USDC",
    "chain": "Ethereum",
    "chainflipId": "Usdc",
    "contractAddress": "0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "asset": "DOT",
    "chain": "Polkadot",
    "chainflipId": "Dot",
    "contractAddress": undefined,
    "decimals": 10,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Polkadot",
    "symbol": "DOT",
  },
  {
    "asset": "ETH",
    "chain": "Ethereum",
    "chainflipId": "Eth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
  {
    "asset": "USDT",
    "chain": "Ethereum",
    "chainflipId": "Usdt",
    "contractAddress": "0x27CEA6Eb8a21Aae05Eb29C91c5CA10592892F584",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "USDT",
    "symbol": "USDT",
  },
  {
    "asset": "USDC",
    "chain": "Arbitrum",
    "chainflipId": "ArbUsdc",
    "contractAddress": "0x75faf114eafb1BDbe2F0316DF893fd58CE46AA4d",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum USDC",
    "symbol": "USDC",
  },
  {
    "asset": "ETH",
    "chain": "Arbitrum",
    "chainflipId": "ArbEth",
    "contractAddress": undefined,
    "decimals": 18,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum Ether",
    "symbol": "ETH",
  },
]
`;

exports[`SwapSDK getAssets returns the filtered assets for the chain 1`] = `
[
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`SwapSDK getAssets throws when requesting an unsupported chain 1`] = `[Error: unsupported source chain "Dogecoin"]`;

exports[`SwapSDK getBoostLiquidity returns the boost pools liquidity depth based on the cf_boost_pools_depth rpc 1`] = `
[
  {
    "asset": "BTC",
    "availableAmount": 100000n,
    "chain": "Bitcoin",
    "feeTierBps": 10,
  },
]
`;

exports[`SwapSDK getBoostLiquidity returns the boost pools liquidity depth based on the cf_boost_pools_depth rpc filtered by asset and sorted descending 1`] = `
[
  {
    "asset": "BTC",
    "availableAmount": 100000n,
    "chain": "Bitcoin",
    "feeTierBps": 20,
  },
  {
    "asset": "BTC",
    "availableAmount": 100000n,
    "chain": "Bitcoin",
    "feeTierBps": 10,
  },
]
`;

exports[`SwapSDK getChains returns the chains based on the cf_supported_assets rpc 1`] = `
[
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "chainflipId": "Btc",
    "contractAddress": undefined,
    "decimals": 8,
    "isMainnet": false,
    "maximumSwapAmount": "1152921504606846976",
    "minimumEgressAmount": "600",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
  {
    "asset": "USDC",
    "chain": "Arbitrum",
    "chainflipId": "ArbUsdc",
    "contractAddress": "0x75faf114eafb1BDbe2F0316DF893fd58CE46AA4d",
    "decimals": 6,
    "isMainnet": false,
    "maximumSwapAmount": null,
    "minimumEgressAmount": "1",
    "minimumSwapAmount": "0",
    "name": "Arbitrum USDC",
    "symbol": "USDC",
  },
]
`;

exports[`SwapSDK getChains returns the correct values for backspin 1`] = `
[
  {
    "chain": "Ethereum",
    "evmChainId": 10997,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Ethereum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Polkadot",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 20,
    "name": "Polkadot",
    "requiredBlockConfirmations": undefined,
  },
  {
    "chain": "Bitcoin",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 30,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
  {
    "chain": "Arbitrum",
    "evmChainId": 412346,
    "isMainnet": false,
    "maxRetryDurationBlocks": 40,
    "name": "Arbitrum",
    "requiredBlockConfirmations": 2,
  },
]
`;

exports[`SwapSDK getChains returns the correct values for mainnet 1`] = `
[
  {
    "chain": "Ethereum",
    "evmChainId": 1,
    "isMainnet": true,
    "maxRetryDurationBlocks": 10,
    "name": "Ethereum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Polkadot",
    "evmChainId": undefined,
    "isMainnet": true,
    "maxRetryDurationBlocks": 20,
    "name": "Polkadot",
    "requiredBlockConfirmations": undefined,
  },
  {
    "chain": "Bitcoin",
    "evmChainId": undefined,
    "isMainnet": true,
    "maxRetryDurationBlocks": 30,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
  {
    "chain": "Arbitrum",
    "evmChainId": 42161,
    "isMainnet": true,
    "maxRetryDurationBlocks": 40,
    "name": "Arbitrum",
    "requiredBlockConfirmations": 2,
  },
]
`;

exports[`SwapSDK getChains returns the correct values for perseverance 1`] = `
[
  {
    "chain": "Ethereum",
    "evmChainId": 11155111,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Ethereum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Polkadot",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 20,
    "name": "Polkadot",
    "requiredBlockConfirmations": undefined,
  },
  {
    "chain": "Bitcoin",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 30,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
  {
    "chain": "Arbitrum",
    "evmChainId": 421614,
    "isMainnet": false,
    "maxRetryDurationBlocks": 40,
    "name": "Arbitrum",
    "requiredBlockConfirmations": 2,
  },
]
`;

exports[`SwapSDK getChains returns the correct values for sisyphos 1`] = `
[
  {
    "chain": "Ethereum",
    "evmChainId": 11155111,
    "isMainnet": false,
    "maxRetryDurationBlocks": 10,
    "name": "Ethereum",
    "requiredBlockConfirmations": 2,
  },
  {
    "chain": "Polkadot",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 20,
    "name": "Polkadot",
    "requiredBlockConfirmations": undefined,
  },
  {
    "chain": "Bitcoin",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 30,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
  {
    "chain": "Arbitrum",
    "evmChainId": 421614,
    "isMainnet": false,
    "maxRetryDurationBlocks": 40,
    "name": "Arbitrum",
    "requiredBlockConfirmations": 2,
  },
]
`;

exports[`SwapSDK getChains returns the filtered destination chains for the chain 1`] = `
[
  {
    "chain": "Polkadot",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 20,
    "name": "Polkadot",
    "requiredBlockConfirmations": undefined,
  },
  {
    "chain": "Bitcoin",
    "evmChainId": undefined,
    "isMainnet": false,
    "maxRetryDurationBlocks": 30,
    "name": "Bitcoin",
    "requiredBlockConfirmations": 3,
  },
  {
    "chain": "Arbitrum",
    "evmChainId": 421614,
    "isMainnet": false,
    "maxRetryDurationBlocks": 40,
    "name": "Arbitrum",
    "requiredBlockConfirmations": 2,
  },
]
`;

exports[`SwapSDK getChains throws when requesting an unsupported chain 1`] = `[Error: unsupported source chain "Dogecoin"]`;

exports[`SwapSDK returns the boost pools liquidity depth based on the cf_boost_pools_depth rpc filtered by tier & asset 1`] = `
[
  {
    "asset": "ETH",
    "availableAmount": 100000n,
    "chain": "Ethereum",
    "feeTierBps": 10,
  },
]
`;

exports[`SwapSDK returns the boost pools liquidity depth based on the cf_boost_pools_depth rpc filtered by tier 1`] = `
[
  {
    "asset": "BTC",
    "availableAmount": 100000n,
    "chain": "Bitcoin",
    "feeTierBps": 10,
  },
  {
    "asset": "ETH",
    "availableAmount": 100000n,
    "chain": "Ethereum",
    "feeTierBps": 10,
  },
]
`;
